--- a/app/src/main/res/layout/activity_main_tab.xml
+++ b/app/src/main/res/layout/activity_main_tab.xml
@@ -1,7 +1,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:paddingBottom="5dp"
+    android:paddingTop="5dp">
 
     <LinearLayout
         android:id="@+id/home_linear"
@@ -9,23 +11,22 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
-        android:orientation="vertical"
-        android:paddingBottom="7dp">
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/home_imageview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/tab_home_icon_select"
-            android:focusable="false"></ImageView>
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:focusable="false"
+            android:src="@drawable/tab_home_icon_select"></ImageView>
 
         <TextView
             android:id="@+id/home_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="首页"
-            android:textColor="#67c0f4"
-            android:textSize="10dp"></TextView>
+            android:textColor="@color/black"
+            android:textSize="14dp"></TextView>
 
     </LinearLayout>
 
@@ -35,15 +36,14 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
-        android:orientation="vertical"
-        android:paddingBottom="7dp">
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/find_imageview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/tab_selector_find_icon"
-            android:focusable="false"></ImageView>
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:focusable="false"
+            android:src="@drawable/tab_selector_order_icon"></ImageView>
 
         <TextView
             android:id="@+id/find_textview"
@@ -51,7 +51,7 @@
             android:layout_height="wrap_content"
             android:text="订单"
             android:textColor="@drawable/tab_selector_textview"
-            android:textSize="10dp"></TextView>
+            android:textSize="14dp"></TextView>
     </LinearLayout>
 
     <LinearLayout
@@ -60,15 +60,14 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
-        android:orientation="vertical"
-        android:paddingBottom="7dp">
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/custome_imageview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/tab_selector_customer_icon"
-            android:focusable="false"></ImageView>
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:focusable="false"
+            android:src="@drawable/tab_selector_customer_icon"></ImageView>
 
         <TextView
             android:id="@+id/custom_textview"
@@ -76,7 +75,7 @@
             android:layout_height="wrap_content"
             android:text="我的"
             android:textColor="@drawable/tab_selector_textview"
-            android:textSize="10dp"></TextView>
+            android:textSize="14dp"></TextView>
     </LinearLayout>
 
 
