--- a/app/src/main/res/layout/activity_splash_layout.xml
+++ b/app/src/main/res/layout/activity_splash_layout.xml
@@ -3,4 +3,10 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+        android:id="@+id/btn"
+        android:layout_width="match_parent"
+        android:textColor="@color/textblack"
+        android:text="点击"
+        android:layout_height="wrap_content" />
 </LinearLayout>
