--- a/app/src/main/res/layout/activity_addaddress_layout.xml
+++ b/app/src/main/res/layout/activity_addaddress_layout.xml
@@ -15,8 +15,9 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:background="@color/white"
+        android:gravity="center"
         android:orientation="horizontal"
         android:padding="10dp">
 
@@ -41,9 +42,10 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginTop="1px"
         android:background="@color/white"
+        android:gravity="center_vertical"
         android:orientation="horizontal"
         android:paddingBottom="5dp"
         android:paddingLeft="10dp"
@@ -87,9 +89,10 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginTop="1px"
         android:background="@color/white"
+        android:gravity="center"
         android:orientation="horizontal"
         android:padding="10dp">
 
@@ -125,7 +128,7 @@
     <LinearLayout
         android:id="@+id/ll_address"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:background="@color/white"
         android:gravity="center"
         android:orientation="horizontal"
@@ -138,13 +141,14 @@
             android:textColor="@color/black"
             android:textSize="16dp" />
 
-        <TextView
+         <TextView
             android:id="@+id/tv_address"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
             android:layout_weight="1"
             android:background="@null"
+            android:gravity="center_vertical"
             android:text="点击选择"
             android:textColor="@color/grayblack"
             android:textSize="16dp" />
@@ -155,10 +159,10 @@
             android:layout_marginRight="10dp"
             android:src="@drawable/right_arrow" />
     </LinearLayout>
+
     <LinearLayout
-        android:id="@+id/ll_address"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:background="@color/white"
         android:gravity="center"
         android:orientation="horizontal"
