--- a/app/src/main/res/layout/activity_myaddress_layout.xml
+++ b/app/src/main/res/layout/activity_myaddress_layout.xml
@@ -9,14 +9,15 @@
         android:id="@+id/lv_address"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="10dp"
         android:layout_weight="1" />
 
     <LinearLayout
         android:id="@+id/ll_add_address"
-        android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/white"
+        android:clickable="true"
         android:gravity="center"
         android:orientation="horizontal">
 
