--- a/app/src/main/res/layout/dialog_common_notitle.xml
+++ b/app/src/main/res/layout/dialog_common_notitle.xml
@@ -45,7 +45,7 @@
                 android:clickable="true"
                 android:gravity="center"
                 android:text="取消"
-                android:textColor="#41b2f3"
+                android:textColor="@color/textblack"
                 android:textSize="16dp" />
 
             <View
@@ -60,8 +60,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="确定"
-                android:textStyle="bold"
-                android:textColor="#41b2f3"
+                android:textColor="@color/myyellow"
                 android:textSize="16dp" />
         </LinearLayout>
     </LinearLayout>
