首页布局调整 收货地址修改完成

--- a/app/src/main/res/layout/item_myaddress_list.xml
+++ b/app/src/main/res/layout/item_myaddress_list.xml
@@ -34,13 +34,24 @@
         android:textSize="16dp" />
 
     <TextView
+        android:id="@+id/tv_sex"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tv_address"
+        android:layout_marginTop="10dp"
+        android:text="女士"
+        android:layout_toRightOf="@id/tv_name"
+        android:textColor="@color/grayblack"
+        android:textSize="16dp" />
+
+    <TextView
         android:id="@+id/tv_tel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_address"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
-        android:layout_toRightOf="@id/tv_name"
+        android:layout_toRightOf="@id/tv_sex"
         android:text="17739775520"
         android:textColor="@color/grayblack"
         android:textSize="16dp" />
