--- a/app/src/main/res/layout/fragment_home_lv_header.xml
+++ b/app/src/main/res/layout/fragment_home_lv_header.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="160dp">
+    android:layout_height="180dp">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
@@ -24,5 +24,6 @@
         android:layout_alignBottom="@id/viewpager"
         android:layout_margin="5dp"
         android:gravity="center"
+        android:visibility="gone"
         android:orientation="horizontal" />
 </RelativeLayout>
