--- a/app/src/main/res/layout/fragment_home_lv_header.xml
+++ b/app/src/main/res/layout/fragment_home_lv_header.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="fitXY"
-        android:src="@color/myyellow" />
+        android:src="@color/gray_bg" />
 
     <LinearLayout
         android:id="@+id/ll_point_group"
