--- a/app/src/main/res/layout/fragment_allorder_layout.xml
+++ b/app/src/main/res/layout/fragment_allorder_layout.xml
@@ -20,6 +20,7 @@
         android:textSize="16dp" />
 
     <Button
+        android:id="@+id/btn_order"
         android:layout_width="150dp"
         android:layout_height="40dp"
         android:layout_marginTop="10dp"
