--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="divideline">#e9e9e9</color>
     <color name="myyellow">#ffd161</color>
     <color name="gray_bg">#efefef</color>
+    <color name="text_price_red">#ff4038</color>
 
 </resources>
