--- a/app/src/main/res/layout/activity_goodsdetailinfo_layout.xml
+++ b/app/src/main/res/layout/activity_goodsdetailinfo_layout.xml
@@ -2,7 +2,8 @@
 <com.mobile.younthcanteen.ui.ZoomScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/sv_root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fillViewport="true">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -89,7 +90,8 @@
                     android:layout_marginRight="10dp"
                     android:background="@drawable/oval_yelow_bg"
                     android:gravity="center"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:visibility="visible">
 
                     <ImageView
                         android:layout_width="wrap_content"
@@ -102,6 +104,39 @@
                         android:text="加入购物车"
                         android:textSize="16dp" />
                 </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/ll_add_subtract"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="10dp"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:visibility="gone">
+
+                    <ImageView
+                        android:id="@+id/iv_cart_subtract"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/subtract_btn_selector" />
+
+                    <TextView
+                        android:id="@+id/tv_cart_num"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginRight="8dp"
+                        android:text="3"
+                        android:textColor="@color/textblack"
+                        android:textSize="16dp" />
+
+                    <ImageView
+                        android:id="@+id/iv_cart_add"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/add_btn_selector" />
+                </LinearLayout>
+
             </LinearLayout>
 
             <View
@@ -144,5 +179,63 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:src="@drawable/goods_back" />
+
+        <TextView
+            android:id="@+id/tv_clearing"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/goods_info_bottom_height"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:background="@color/myyellow"
+            android:gravity="center"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:text="去结算"
+            android:textColor="@color/textblack"
+            android:textSize="16dp"
+            android:visibility="gone" />
+
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/goods_info_bottom_height"
+            android:layout_alignParentBottom="true"
+            android:layout_toLeftOf="@id/tv_clearing"
+            android:background="@color/bottom_black_bg" />
+
+        <ImageView
+            android:id="@+id/iv_cart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="20dp"
+            android:layout_marginLeft="10dp"
+            android:src="@drawable/cart_unable" />
+
+        <TextView
+            android:id="@+id/tv_red_num"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignRight="@id/iv_cart"
+            android:layout_alignTop="@id/iv_cart"
+            android:background="@drawable/point_red"
+            android:gravity="center"
+            android:text="0"
+            android:textColor="@color/white"
+            android:textSize="16dp"
+            android:visibility="gone" />
+
+
+        <TextView
+            android:id="@+id/tv_result_price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="20dp"
+            android:layout_marginLeft="8dp"
+            android:layout_toRightOf="@id/iv_cart"
+            android:layout_weight="1"
+            android:text="￥0"
+            android:textColor="@color/white"
+            android:textSize="20dp" />
     </RelativeLayout>
 </com.mobile.younthcanteen.ui.ZoomScrollView>
