--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <dimen name="title_height">50dp</dimen>
+
+    <dimen name="goods_info_bottom_height">60dp</dimen>
 </resources>
