--- a/app/src/main/res/layout/activity_main_tab.xml
+++ b/app/src/main/res/layout/activity_main_tab.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:id="@+id/ll_tab_container"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:paddingBottom="5dp"
@@ -18,20 +19,20 @@
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:focusable="false"
-            android:src="@drawable/tab_home_icon_select"></ImageView>
+            android:src="@drawable/tab_selector_home_icon" />
 
         <TextView
             android:id="@+id/home_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="首页"
-            android:textColor="@color/black"
-            android:textSize="14dp"></TextView>
+            android:textColor="@drawable/tab_selector_textview"
+            android:textSize="14dp" />
 
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/find_linear"
+        android:id="@+id/cart_linear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -39,19 +40,43 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/find_imageview"
+            android:id="@+id/cart_imageview"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:focusable="false"
-            android:src="@drawable/tab_selector_order_icon"></ImageView>
+            android:src="@drawable/tab_selector_cart_icon" />
 
         <TextView
-            android:id="@+id/find_textview"
+            android:id="@+id/cart_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="购物车"
+            android:textColor="@drawable/tab_selector_textview"
+            android:textSize="14dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/order_linear"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/order_imageview"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:focusable="false"
+            android:src="@drawable/tab_selector_order_icon" />
+
+        <TextView
+            android:id="@+id/order_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="订单"
             android:textColor="@drawable/tab_selector_textview"
-            android:textSize="14dp"></TextView>
+            android:textSize="14dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -67,15 +92,15 @@
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:focusable="false"
-            android:src="@drawable/tab_selector_customer_icon"></ImageView>
+            android:src="@drawable/tab_selector_customer_icon" />
 
         <TextView
-            android:id="@+id/custom_textview"
+            android:id="@+id/custome_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="我的"
             android:textColor="@drawable/tab_selector_textview"
-            android:textSize="14dp"></TextView>
+            android:textSize="14dp" />
     </LinearLayout>
 
 
