--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -7,7 +7,6 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
         android:background="@color/white"
         android:gravity="center"
         android:padding="10dp"
@@ -15,9 +14,21 @@
         android:textColor="@color/textblack"
         android:textSize="20dp" />
 
-    <ScrollView
+    <TextView
+        android:id="@+id/tv_no_shopping"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="您的购物车空空如也~~~"
+        android:textColor="@color/textblack"
+        android:textSize="18dp" />
+
+    <ScrollView
+        android:id="@+id/sv_cart_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="20dp"
+        android:visibility="gone">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -139,4 +150,5 @@
                 android:background="@color/myyellow" />
         </LinearLayout>
     </ScrollView>
+
 </LinearLayout>
