--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -2,17 +2,40 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/gray_bg"
     android:orientation="vertical">
 
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
-        android:gravity="center"
-        android:padding="10dp"
-        android:text="购物车"
-        android:textColor="@color/textblack"
-        android:textSize="20dp" />
+        android:gravity="center_vertical"
+        android:paddingBottom="20dp"
+        android:paddingTop="20dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="购物车"
+            android:textColor="@color/textblack"
+            android:textSize="20dp" />
+
+        <TextView
+            android:id="@+id/tv_modify"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:background="@color/white"
+            android:gravity="center"
+            android:paddingLeft="10dp"
+            android:paddingRight="15dp"
+            android:text="编辑"
+            android:textColor="@color/textblack"
+            android:textSize="16dp" />
+
+    </RelativeLayout>
+
 
     <TextView
         android:id="@+id/tv_no_shopping"
@@ -21,14 +44,15 @@
         android:gravity="center"
         android:text="您的购物车空空如也~~~"
         android:textColor="@color/textblack"
-        android:textSize="18dp" />
+        android:textSize="18dp"
+        android:visibility="gone" />
 
     <ScrollView
         android:id="@+id/sv_cart_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="20dp"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -148,6 +172,47 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="@color/myyellow" />
+
+            <com.mobile.younthcanteen.ui.ListViewForScroll
+                android:id="@+id/lv_address_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="15dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:background="@color/white"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:text="合计"
+                    android:textColor="@color/textblack"
+                    android:textSize="16dp" />
+
+                <TextView
+                    android:id="@+id/tv_total_price"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="￥2元"
+                    android:textColor="@color/text_price_red"
+                    android:textSize="20dp" />
+
+                <Button
+                    android:id="@+id/btn_commit_order"
+                    android:layout_width="100dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/myyellow"
+                    android:text="提交订单"
+                    android:textColor="@color/textblack"
+                    android:textSize="16dp" />
+            </LinearLayout>
+
         </LinearLayout>
     </ScrollView>
 
