套餐天添加到购物车逻辑完成

--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -10,8 +10,8 @@
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:gravity="center_vertical"
-        android:paddingBottom="20dp"
-        android:paddingTop="20dp">
+        android:paddingBottom="15dp"
+        android:paddingTop="15dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -72,10 +72,10 @@
                 android:background="@color/white"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
-                android:paddingBottom="20dp"
+                android:paddingBottom="15dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
-                android:paddingTop="20dp">
+                android:paddingTop="15dp">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -176,8 +176,7 @@
             <com.mobile.younthcanteen.ui.ListViewForScroll
                 android:id="@+id/lv_address_list"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="15dp" />
+                android:layout_height="match_parent"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
