--- a/app/src/main/res/layout/activity_packagegoodsinfo_layout.xml
+++ b/app/src/main/res/layout/activity_packagegoodsinfo_layout.xml
@@ -104,6 +104,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:text="点击框框选择菜品："
+                android:layout_marginTop="15dp"
                 android:textColor="@color/textblack"
                 android:textSize="16dp" />
 
