--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -205,7 +205,7 @@
 
             <View
                 android:layout_width="match_parent"
-                android:background="@color/gray_bg"
+                android:background="@color/divideline"
                 android:layout_height="1px"/>
             <LinearLayout
                 android:layout_width="match_parent"
