--- a/app/src/main/res/layout/activity_splash_layout.xml
+++ b/app/src/main/res/layout/activity_splash_layout.xml
@@ -8,5 +8,6 @@
         android:layout_width="match_parent"
         android:textColor="@color/textblack"
         android:text="点击"
+        android:visibility="gone"
         android:layout_height="wrap_content" />
 </LinearLayout>
