--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,5 +15,7 @@
     <color name="bottom_black_bg">#404040</color>
     <color name="cart_num_red_bg">#fa4e44</color>
     <color name="gray_select_border">#999999</color>
+    <color name="myInputPwdBase_blue">#0887ee</color>
+    <color name="myInputPwdBase_gray">#f0f0f6</color>
 
 </resources>
