--- a/app/src/main/res/layout/activity_myaccount_layout.xml
+++ b/app/src/main/res/layout/activity_myaccount_layout.xml
@@ -12,8 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_marginTop="10dp"
-        android:clickable="true"
         android:background="@drawable/selector_white_gray"
+        android:clickable="true"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
@@ -53,8 +53,8 @@
         android:id="@+id/ll_nick_name"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:clickable="true"
         android:background="@drawable/selector_white_gray"
+        android:clickable="true"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
@@ -93,10 +93,10 @@
 
     <LinearLayout
         android:id="@+id/ll_pwd"
-        android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:background="@drawable/selector_white_gray"
+        android:clickable="true"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
@@ -133,11 +133,52 @@
         android:background="@color/divideline" />
 
     <LinearLayout
+        android:id="@+id/ll_pay_pwd"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="@drawable/selector_white_gray"
         android:clickable="true"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:text="支付密码"
+            android:textColor="@color/textblack"
+            android:textSize="16dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:layout_marginRight="10dp"
+            android:gravity="center_vertical"
+            android:src="@drawable/user_icon_default"
+            android:text="修改"
+            android:textColor="@color/grayblack"
+            android:textSize="14dp" />
+
+        <ImageView
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/right_arrow" />
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/divideline" />
+
+    <LinearLayout
         android:id="@+id/ll_phonenumber"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:background="@drawable/selector_white_gray"
+        android:clickable="true"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
@@ -166,8 +207,8 @@
             android:layout_width="10dp"
             android:layout_height="10dp"
             android:layout_marginRight="10dp"
-            android:visibility="gone"
-            android:src="@drawable/right_arrow" />
+            android:src="@drawable/right_arrow"
+            android:visibility="gone" />
     </LinearLayout>
 
     <View
@@ -178,10 +219,10 @@
     <Button
         android:id="@+id/btn_logout"
         android:layout_width="match_parent"
+        android:layout_height="60dp"
         android:background="@drawable/selector_white_gray"
-        android:textSize="16dp"
         android:text="退出当前账号"
         android:textColor="#f34c3c"
-        android:layout_height="60dp" />
+        android:textSize="16dp" />
 
 </LinearLayout>
