--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -4,7 +4,7 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="48dp"
-    android:background="@color/white"
+    android:background="@color/myyellow"
     android:minHeight="48dp"
     app:contentInsetStart="0dp"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
@@ -18,14 +18,14 @@
         <ImageButton
             android:id="@+id/titlebar_back"
             android:layout_width="wrap_content"
-            android:layout_height="48dp"
+            android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:background="@color/transparent"
-            android:paddingLeft="6dp"
-            android:paddingRight="6dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
             android:scaleType="center"
-            android:src="@drawable/arrow_left"
+            android:src="@drawable/icon_back"
             android:visibility="visible" />
 
 
@@ -33,13 +33,12 @@
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@id/titlebar_back"
             android:ellipsize="middle"
+            android:layout_centerInParent="true"
             android:gravity="center"
             android:singleLine="true"
             android:text="标题"
-            android:textColor="@color/textblack"
+            android:textColor="@color/white"
             android:textSize="18dp" />
 
         <TextView
@@ -51,7 +50,7 @@
             android:layout_marginRight="20dp"
             android:gravity="center"
             android:text="副标题"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:visibility="gone"
             android:textSize="16dp" />
     </RelativeLayout>
