--- a/app/src/main/res/layout/item_packagegoodsselect_layout.xml
+++ b/app/src/main/res/layout/item_packagegoodsselect_layout.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/ll_root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@drawable/shape_gray_border"
     android:gravity="center"
     android:orientation="vertical">
@@ -10,8 +10,10 @@
     <TextView
         android:id="@+id/tv_add"
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:gravity="center"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:textColor="@color/textblack"
         android:textSize="16dp" />
 </LinearLayout>
